--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0"
   },
-  "homepage": "https://food-fact.github.io/food-fact",
+  "homepage": "https://food-fact.github.io/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
